--- a/my_first_html_lab.html
+++ b/my_first_html_lab.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>First Website</title>  
+      <title>Example Website</title>  
     </head>
     <body>
         <p>
